# turtlebot3_manipulation_simulations

./: README.md
.github/workflows/: ros-ci.yml
open_manipulator_with_tb3_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_with_tb3_gazebo/config/: gazebo_controller.yaml  joint_controller.yaml  joint_position_controller.yaml  joint_state_controller.yaml  open_manipulator_with_tb3_controller.yaml
open_manipulator_with_tb3_gazebo/launch/: controller_utils.launch  empty_world.launch  joint_controller.launch  joint_position_controller.launch  om_tb3.launch  open_manipulator_with_tb3_controller.launch  open_manipulator_with_tb3_gazebo.launch  open_manipulator_with_tb3_rooms.launch  rooms.launch  tb3_omx.launch
open_manipulator_with_tb3_gazebo/models/turtlebot3_rooms/: model.sdf
open_manipulator_with_tb3_gazebo/models/turtlebot3_rooms/ar_marker/: model.sdf
open_manipulator_with_tb3_gazebo/models/turtlebot3_rooms/ar_marker/materials/scripts/: ar_marker.material
open_manipulator_with_tb3_simulations/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_manipulation_gazebo/: CMakeLists.txt  package.xml
turtlebot3_manipulation_gazebo/config/: arm_controller.yaml  gazebo_controller.yaml  gripper_controller.yaml
turtlebot3_manipulation_gazebo/launch/: controller_utils.launch  empty_world.launch.py  robot_state_publisher.launch.py  tb3_omx.launch  turtlebot3_manipulation.launch  turtlebot3_manipulation_controller.launch  turtlebot3_manipulation_controller.launch.py  turtlebot3_manipulation_gazebo.launch
turtlebot3_manipulation_gazebo/models/turtlebot3_manipulation_waffle_pi/: model-1_4_.sdf  model.config  model.sdf
turtlebot3_manipulation_gazebo/models/turtlebot3_manipulation_waffle_pi/meshes/: lds.dae  tire.dae  waffle_pi_base.dae
turtlebot3_manipulation_gazebo/param/: tb3_omx_gazebo_params.yaml
turtlebot3_manipulation_gazebo/rviz/: turtlebot3_manipulation.rviz
turtlebot3_manipulation_gazebo/src/: turtlebot3_manipulation_drive.cpp
turtlebot3_manipulation_gazebo/worlds/empty_worlds/: waffle_pi.model
turtlebot3_manipulation_simulations/: CHANGELOG.rst  CMakeLists.txt  package.xml
