<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_with_tb3_gazebo</name>
  <version>1.1.0</version>
  <description>
    Simulation package using gazebo for OpenManipulator with TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="thlim@robotis.com">Darby Lim</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_with_tb3_gazebo</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/manipulation</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_with_tb3_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_with_tb3_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
