<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_with_tb3_simulations</name>
  <version>1.1.0</version>
  <description>
    Simulation packages for OpenManipulator with TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="thlim@robotis.com">Darby Lim</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_with_tb3_simulations</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/turtlebot3/manipulation</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_with_tb3_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_with_tb3_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>open_manipulator_with_tb3_gazebo</exec_depend>
  <export><metapackage/></export>
</package>
