<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_manipulation_gazebo</name>
  <version>2.1.0</version>
  <description>ROS package for turtlebot3_manipulation_gazebo</description>

  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/turtlebot3_manipulation_simulations</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_manipulation_simulations/issues</url>
  <author email="willson@robotis.com">Will Son</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>open_manipulator_x_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
  
</package>
